language/move-lang/tests/move_check/typing/subtype_args_invalid.exp
error[E04006]: invalid subtype
   ┌─ tests/move_check/typing/subtype_args_invalid.move:10:9
   │
 4 │     fun mut<T>(x: &mut T) {}
   │                   ------ Expected: '&mut u64'
   ·
10 │         mut<u64>(&0);
   │         ^^^^^^^^^^^^
   │         │        │
   │         │        Given: '&{integer}'
   │         Invalid call of '0x8675309::M::mut'. Invalid argument for parameter 'x'

error[E04006]: invalid subtype
   ┌─ tests/move_check/typing/subtype_args_invalid.move:11:9
   │
 4 │     fun mut<T>(x: &mut T) {}
   │                   ------ Expected: '&mut u64'
   ·
11 │         mut<u64>(&S{});
   │         ^^^^^^^^^^^^^^
   │         │        │
   │         │        Given: '&0x8675309::M::S'
   │         Invalid call of '0x8675309::M::mut'. Invalid argument for parameter 'x'

error[E04006]: invalid subtype
   ┌─ tests/move_check/typing/subtype_args_invalid.move:15:9
   │
 5 │     fun imm_mut<T>(x: &T, y: &mut T) {}
   │                              ------ Expected: '&mut u64'
   ·
15 │         imm_mut<u64>(&0, &0);
   │         ^^^^^^^^^^^^^^^^^^^^
   │         │                │
   │         │                Given: '&{integer}'
   │         Invalid call of '0x8675309::M::imm_mut'. Invalid argument for parameter 'y'

error[E04006]: invalid subtype
   ┌─ tests/move_check/typing/subtype_args_invalid.move:16:9
   │
 6 │     fun mut_imm<T>(x: &mut T, y: &T) {}
   │                       ------ Expected: '&mut u64'
   ·
16 │         mut_imm<u64>(&0, &0);
   │         ^^^^^^^^^^^^^^^^^^^^
   │         │            │
   │         │            Given: '&{integer}'
   │         Invalid call of '0x8675309::M::mut_imm'. Invalid argument for parameter 'x'

error[E04006]: invalid subtype
   ┌─ tests/move_check/typing/subtype_args_invalid.move:17:9
   │
 7 │     fun mut_mut<T>(x: &mut T, y: &mut T) {}
   │                       ------ Expected: '&mut u64'
   ·
17 │         mut_mut<u64>(&0, &0);
   │         ^^^^^^^^^^^^^^^^^^^^
   │         │            │
   │         │            Given: '&{integer}'
   │         Invalid call of '0x8675309::M::mut_mut'. Invalid argument for parameter 'x'

error[E04006]: invalid subtype
   ┌─ tests/move_check/typing/subtype_args_invalid.move:17:9
   │
 7 │     fun mut_mut<T>(x: &mut T, y: &mut T) {}
   │                                  ------ Expected: '&mut u64'
   ·
17 │         mut_mut<u64>(&0, &0);
   │         ^^^^^^^^^^^^^^^^^^^^
   │         │                │
   │         │                Given: '&{integer}'
   │         Invalid call of '0x8675309::M::mut_mut'. Invalid argument for parameter 'y'

